test/Fail/Issue3566-2.err
Issue3566-2.agda:12.8-9: error: [UnequalTypes]
The type
  (r : R) → A
is not a subtype of
  A
when checking that the expression b has type A
